--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "servers": "nodemon server.js"
+    "server": "nodemon server.js",
+    "github": "git add . && git commit -m \"making commit\""
   },
-  "author": "",
+  "author": "Uri Rahimi",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.8",
     "passport": "^0.4.0",
